--- a/src/components/activity/EventCard.less
+++ b/src/components/activity/EventCard.less
@@ -1,6 +1,7 @@
 @event_card_bg_color: #edf3f1;
 @blue_color: #1296db;
 @title_color: #707070;
+@font-size: 0.8rem;
 
 :global {
   .ant-timeline-item-head-blue {
@@ -33,14 +34,14 @@
 
   &_title {
     padding-left: 5px;
-    font-size: 1rem;
+    font-size: @font-size;
     color: @title_color;
     display: inline;
   }
 
   &_content {
     display: inline;
-    font-size: 1rem;
+    font-size: @font-size;
     font-weight: bolder;
   }
 }
